# bot-windows

./: .gitignore  Makefile  app.py  bot.py  pyproject.toml
src/: app.py  data.py  settings.py  user_cases.py  yclients.py
